Stop horizontal scrollbar from appearing

--- a/amp_conf/htdocs/admin/assets/less/freepbx/page.less
+++ b/amp_conf/htdocs/admin/assets/less/freepbx/page.less
@@ -211,7 +211,7 @@ span.twitter-typeahead .tt-dropdown-menu {
 	}
 	#action-bar {
 		position: fixed;
-		right: -1px;
+		right: 0px;
 		bottom: 10px;
 		//right: 10px;
 		z-index: 5;
